--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,7 @@ const {
 <!doctype html>
 <html lang={SITE.lang ?? "en"} class={cn({"scroll-smooth": scrollSmooth})}>
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <meta name="msapplication-TileColor" content="#000000"/>
     <meta name="viewport" content="width=device-width"/>
     <meta charset="UTF-8"/>
